--- a/style.css
+++ b/style.css
@@ -264,27 +264,38 @@ h3 {
   transform: translateY(-5px);
 }
 
-/* صور العطر والزهرة */
+/* Header images */
+.header__image {
+  grid-column: 3;
+  position: relative;
+  width: 100%;
+  height: 420px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-self: end;
+  overflow: visible;        /* مهم: لا يقطع الصورة */
+}
+
 .header__image .main-img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;       /* خليها عادية فوق الزهرة */
   max-width: 430px;
   z-index: 2;
   animation: slideInMain 1.5s ease forwards;
-  opacity: 0;
+  opacity: 1;               /* للتجربة: خليها 1 بدل 0 */
+  transform: none;          /* ألغِ الترانسليت مؤقتًا */
 }
 
 .header__image .bg-img {
   position: absolute;
-  bottom: -120px;
-  right: -200px;
+  bottom: -80px;
+  right: -120px;
   max-width: 450px;
   z-index: 1;
   animation: slideInBg 2s ease forwards;
-  opacity: 0;
+  opacity: 1;               /* نفس الشي للتجربة */
 }
+
 
 /* شريط أسفل الهيرو */
 .footer-bar {
@@ -1370,6 +1381,7 @@ footer .footer-bottom {
     padding-right: 1.3rem;
   }
 }
+
 
 
 
